@@ -3,6 +3,7 @@ ANTLR v4 Honey Badger
 November 17, 2012
 
 * .tokens files goes in output dir like parser file.
+* added check: action in lexer rules must be last element of outermost alt
 
 November 11, 2012
 
